--- a/Project_UI2/Project_UI/HODStyle.css
+++ b/Project_UI2/Project_UI/HODStyle.css
@@ -35,7 +35,7 @@ body {
     position: relative;
     background: #fff;
     border-radius: 25px;
-    height: 100%;
+    height: auto;
     padding: 25px;
     padding-left: 50px;
 }
