--- a/Project_UI2/Project_UI/HODStyle.css
+++ b/Project_UI2/Project_UI/HODStyle.css
@@ -11,7 +11,7 @@ body {
 .container {
     position: absolute;
     max-width: 800px;
-    height: 500px;
+    height: auto;
     margin: auto;
     top: 40%;
     left: 50%;
