--- a/Project_UI2/Project_UI/Navigation.Master
+++ b/Project_UI2/Project_UI/Navigation.Master
@@ -5,6 +5,11 @@
 <html>
 <head runat="server">
     <title></title>
+     <script type="text/javascript">
+         function logout() {
+             window.location = "./logout.aspx";
+         }
+     </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -82,9 +87,12 @@
                 <a class="navbar-brand" href="#">
                     <asp:Image ID="Logo" ImageUrl="https://st4.depositphotos.com/17903764/20639/v/450/depositphotos_206399974-stock-illustration-initial-letter-logo-template-design.jpg" alt="Logo" Width="70" Height="70" class="d-inline-block align-text-top" runat="server" />
                 </a>
-                <button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+                <%--<button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>--%>
+                <button type="button" class="btn btn-outline-light btn1" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="Profile" onclick="logout()">
+                            Log out
+                        </button>
                 <div class="collapse navbar-collapse text-light display-6" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-1 mb-lg-0 text-success-emphasis">
                         <li class="nav-item ms-3">
