--- a/Project_UI2/Project_UI/Navigation.Master
+++ b/Project_UI2/Project_UI/Navigation.Master
@@ -5,11 +5,12 @@
 <html>
 <head runat="server">
     <title></title>
-     <script type="text/javascript">
-         function logout() {
-             window.location = "./logout.aspx";
-         }
-     </script>
+    <script type="text/javascript">
+        function logout() {
+            window.location = "./logout.aspx";
+            sessionStorage.clear();
+        }
+    </script>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -90,9 +91,6 @@
                 <%--<button class="navbar-toggler text-bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>--%>
-                <button type="button" class="btn btn-outline-light btn1" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="Profile" onclick="logout()">
-                            Log out
-                        </button>
                 <div class="collapse navbar-collapse text-light display-6" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-1 mb-lg-0 text-success-emphasis">
                         <li class="nav-item ms-3">
@@ -108,9 +106,9 @@
                             <a class="nav-link ac">Help</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
-                        <button class="btn btn-outline-light btn1" type="submit">Profile</button>
-                    </form>
+                    <button type="button" class="btn btn-outline-light btn1" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="Profile" onclick="logout()">
+                        Log out
+                    </button>
                 </div>
             </div>
         </nav>
@@ -124,14 +122,16 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <marquee><ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">©Copyright, All Rights Reserved</a>
-                        </li>
-<%--                        <li class="nav-item">
+                    <marquee>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active text-light" aria-current="page" href="#">©Copyright, All Rights Reserved</a>
+                            </li>
+                            <%--                        <li class="nav-item">
                             <a class="nav-link text-light" href="#">Learn more</a>
                         </li>--%>
-                    </ul></marquee>
+                        </ul>
+                    </marquee>
                 </div>
             </div>
         </nav>
