--- a/Project_UI2/Project_UI/Navigation.Master
+++ b/Project_UI2/Project_UI/Navigation.Master
@@ -94,7 +94,7 @@
                 <div class="collapse navbar-collapse text-light display-6" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-1 mb-lg-0 text-success-emphasis">
                         <li class="nav-item ms-3">
-                            <a class="nav-link active text-light ac" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active text-light ac" aria-current="page" href="Home.aspx">Home</a>
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link ac" href="#">About Us</a>
