--- a/Project_UI2/Project_UI/Navigation.Master
+++ b/Project_UI2/Project_UI/Navigation.Master
@@ -97,7 +97,7 @@
                             <a class="nav-link active text-light ac" aria-current="page" href="Home.aspx">Home</a>
                         </li>
                         <li class="nav-item ms-3">
-                            <a class="nav-link ac" href="#">About Us</a>
+                            <a class="nav-link ac" href="About_US.aspx">About Us</a>
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link ac" href="#">Contact Us</a>
